2003-02-14  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 678194 ]: symbol-macrolet not always expanded
	* eval.d (parse_dd): do not macroexpand the potential
	declarations and docstrings (as per ANSI CL)

2003-02-13  Sam Steingold  <sds@gnu.org>

	* stream.d (create_input_pipe, create_output_pipe, create_io_pipe):
	wrap child creation in begin_want_sigcld()/end_want_sigcld(),
	just like it is done in EXECUTE
	Reported by Kaz Kylheku <kaz@ashi.footprints.net>
	(MAKE-STRING-PUSH-STREAM): fixed error message arguments

2003-02-13  Sam Steingold  <sds@gnu.org>

	* io.d (PARSE-INTEGER): signal a PARSE-ERROR on bad syntax and
	report only the substring being parsed, not the whole string
	Reported by Joerg Hoehle

2003-02-13  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 685855 ]: ext:string-width ignores :start
	* charstrg.d (STRING-WIDTH): start with :START, not 0
	* stream.d (MAKE-STRING-INPUT-STREAM): respect both index and offset

2003-02-10  Sam Steingold  <sds@gnu.org>

	Do not treat #\/ in logical pathnames as #\;
	* pathname.d (lslashp): reintroduced
	(slashp): removed
	(parse_logical_word, parse_logical_pathnamestring):
	use lslashp() instead of slashp()
	(PARSE-NAMESTRING): use pslashp() instead of slashp()
	(ensure_last_slash): check both pslashp() and lslashp()

2003-02-09  Sam Steingold  <sds@gnu.org>

	* debug.d (break_driver): unbind *TERMINAL-READ-OPEN-OBJECT*,
	just like *TERMINAL-READ-STREAM*
	* reploop.lisp (break-loop): ditto

2003-02-09  Sam Steingold  <sds@gnu.org>

	* modules/bindings/linuxlibc6/linux.lisp (__ctype_get_mb_cur_max):
	returns size_t
	(errno): commented out (neither method works)
	(initstate, setstate): statebuf is a C-STRING, not a C-POINTER
	(seed48): seed16v is a C-ARRAY, not a (C-PTR (C-ARRAY ...))
	(unsetenv): return int
	(realpath): return C-STRING
	(execv, execve, execvp): added
	Thanks to Dan Knapp, John K. Hinsdale, and Joerg Hoehle

2003-02-09  Sam Steingold  <sds@gnu.org>
