@@ -3,17 +3,18 @@
 (defmacro typecase (keyform &rest typeclauselist)
   (let* ((tempvar (gensym))
          (condclauselist nil))
-    (do ((typeclauselistr typeclauselist (cdr typeclauselistr)))
+    (do ((typeclauselistr typeclauselist (cdr typeclauselistr)) spec)
         ((atom typeclauselistr))
       (cond ((atom (car typeclauselistr))
              (error-of-type 'source-program-error
                (TEXT "Invalid clause in ~S: ~S")
                'typecase (car typeclauselistr)))
-            ((let ((type (caar typeclauselistr)))
-               (or (eq type T) (eq type 'OTHERWISE)))
+            ((eq (setq spec (caar typeclauselistr)) T)
              (push `(T ,@(or (cdar typeclauselistr) '(NIL))) condclauselist)
              (return))
-            (t (push `((TYPEP ,tempvar (QUOTE ,(caar typeclauselistr)))
+            ((and (atom (cdr typeclauselistr)) (eq spec 'OTHERWISE))
+             (push `(T ,@(or (cdar typeclauselistr) '(NIL))) condclauselist))
+            (t (push `((TYPEP ,tempvar (QUOTE ,spec))
                        ,@(or (cdar typeclauselistr) '(NIL)))
                      condclauselist))))
     `(LET ((,tempvar ,keyform)) (COND ,@(nreverse condclauselist)))))
